# cinema

./: .dockerignore  .gitignore  Dockerfile  README.md
app/: pyproject.toml  requirements.txt
app/account/: urls.py  views.py
app/account/admin/: user.py
app/account/migrations/: 0001_initial.py
app/account/models/: user.py  user_manager.py
app/common/models/: __init__.py  base.py  time_stamp.py  uuid.py
app/common/services/: base.py
app/config/: __init__.py  celery.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  local.py  test.py
app/content/: apps.py  urls.py
app/content/admin/: __init__.py  episode.py  episode_source.py  movie.py  movie_source.py  season.py  season_source.py  show.py  show_source.py  source.py
app/content/migrations/: 0001_initial.py  0002_alter_episodesource_unique_together_and_more.py  0002_moviesource_valid_source.py  0003_alter_episodesource_unique_together_and_more.py  0003_rename_movie_source_movie_movie_sources.py  0004_source_slug.py  0005_remove_show_is_free_remove_show_is_trending_and_more.py  0006_rename_play_link_moviesource_imdb_link_and_more.py  0007_remove_season_sources_season_season_sources.py  0008_seasonsource_valid_source.py  0009_seasonsource_show_alter_seasonsource_unique_together_and_more.py  0010_moviesource_tmdb_link_showsource_tmdb_link.py  0011_movie_tmdb_rating_show_tmdb_rating.py  0012_moviesource_watch_link_showsource_watch_link.py  0013_alter_moviesource_movie_alter_moviesource_source.py  0014_alter_moviesource_valid_source_and_more.py  0017_alter_source_options.py  (+4 more)
(+56 files in other folders)
